force-app/main/default/objects/lleads__Lead_Object_Mapping__mdt/lleads__Lead_Object_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Lead Object Mapping</label>
    <pluralLabel>Lead Object Mappings</pluralLabel>
</CustomObject>