force-app/main/default/objects/lleads__Lead_Object_Mapping__mdt/fields/lleads__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>lleads__Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>