force-app/main/default/objects/lleads__Lead_Object_Mapping__mdt/fields/lleads__Lead_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>lleads__Lead_Field_API_Name__c</fullName>
    <label>Lead Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>