force-app/main/default/objects/lleads__Lead_Object_Mapping__mdt/fields/lleads__Target_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>lleads__Target_Field_API_Name__c</fullName>
    <label>Target Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>