force-app/main/default/objects/lleads__Lead_Object_Mapping__mdt/listViews/lleads__Prospect_Mapping.listView-meta.xml
<ListView>
    <fullName>lleads__Prospect_Mapping</fullName>
    <columns>MasterLabel</columns>
    <columns>lleads__Lead_Field_API_Name__c</columns>
    <columns>lleads__Target_Field_API_Name__c</columns>
    <columns>lleads__Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>Prospect - Lead Mapping</label>
</ListView>